services/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photoprism
  name: photoprism
spec:
  type: ClusterIP
  ports:
  - name: photoprism
    protocol: TCP
    targetPort: 2342
    port: 80
  selector:
    app: photoprism
