services/photoprism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - photo.in.takutakahashi.dev
    secretName: photoprism-tls-secret
  rules:
  - host: photo.in.takutakahashi.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: photoprism
            port:
              number: 80
